1,Library robin-support-recyclerview help to show a list activity. 2,Invisalign record list.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app',":toothdaily", ':robin-support-commom-tools'
+include ':app', ':robin-support-recyclerview',":toothdaily", ':robin-support-commom-tools'
