--- a/tooth-care/src/main/AndroidManifest.xml
+++ b/tooth-care/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="cting.com.robin.support.toothcare">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,13 +11,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ToolActivity">
+        <activity android:name=".activities.ToolActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.DailyRecordListActivity"
+            android:label="@string/activity_label_daily_record_list"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.ProgressListActivity"
+            android:label="@string/activity_label_progress_list"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.DailyRecordDetailActivity"
+            android:label="@string/activity_label_daily_record_detail"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
