--- a/toothdaily/src/main/AndroidManifest.xml
+++ b/toothdaily/src/main/AndroidManifest.xml
@@ -11,19 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".activities.DailyRecordActivity"
-            android:label="@string/title_activity_daily_record">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
-            android:name=".datagenerator.ToolActivity"
+            android:name=".activities.ToolActivity"
             android:exported="true"
             android:label="@string/title_activity_tool" />
+
+        <activity
+            android:name="cting.com.robin.support.recyclerview.sample.SimpleRobinListActivity"
+            android:label="@string/title_activity_robin_list"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+
         <activity
             android:name=".activities.ProgressListActivity"
             android:label="@string/title_activity_progress_list"
@@ -36,10 +36,22 @@
         </activity>
 
         <activity
-            android:name="cting.com.robin.support.recyclerview.sample.SimpleRobinListActivity"
-            android:label="@string/title_activity_robin_list"
+            android:name=".activities.ProgressDetailActivity"
             android:exported="true"
-            android:theme="@style/AppTheme.NoActionBar" />
-    </application>
+            android:label="@string/title_activity_progress_detail"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
 
+        <activity
+            android:name=".activities.DailyRecordActivity"
+            android:label="@string/title_activity_daily_record">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
+    </application>
 </manifest>
