Add Today fragment.

--- a/tooth-care/src/main/AndroidManifest.xml
+++ b/tooth-care/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.ToolActivity">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name=".activities.DailyRecordListActivity"
@@ -46,6 +46,18 @@
             android:name=".activities.ProgressDetailActivity"
             android:label="@string/activity_label_progress_detail"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".activities.TodayActivity"
+            android:label="@string/activity_label_today"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
