Main Activity for entrance.

--- a/tooth-care/src/main/AndroidManifest.xml
+++ b/tooth-care/src/main/AndroidManifest.xml
@@ -11,13 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ToolActivity">
-            <!--<intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
-        </activity>
+        <activity android:name=".activities.ToolActivity" />
+
         <activity
             android:name=".activities.DailyRecordListActivity"
             android:label="@string/activity_label_daily_record_list"
@@ -28,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activities.ProgressListActivity"
             android:label="@string/activity_label_progress_list"
@@ -38,10 +35,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activities.DailyRecordDetailActivity"
             android:label="@string/activity_label_daily_record_detail"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".activities.ProgressDetailActivity"
             android:label="@string/activity_label_progress_detail"
@@ -58,6 +57,18 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activities.AllInOneActivity"
+            android:label="@string/title_activity_all_in_one"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <service android:name=".services.DataLoaderService" android:exported="false"/>
     </application>
 
 </manifest>
