--- a/tooth-care/build.gradle
+++ b/tooth-care/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     compile project(path: ':robin-support-recyclerview')
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
