Custom state button for add/delete/complete time slice.

--- a/tooth-care/src/main/AndroidManifest.xml
+++ b/tooth-care/src/main/AndroidManifest.xml
@@ -18,22 +18,22 @@
             android:name=".activities.DailyRecordListActivity"
             android:label="@string/activity_label_daily_record_list"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
         <activity
             android:name=".activities.ProgressListActivity"
             android:label="@string/activity_label_progress_list"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
         <activity
@@ -50,11 +50,11 @@
             android:name=".activities.TodayActivity"
             android:label="@string/activity_label_today"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
         <activity
