--- a/teeth-care/src/main/AndroidManifest.xml
+++ b/teeth-care/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="cting.com.robin.support.teethcare">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,6 +16,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
             android:label="@string/activity_label_main"
+            android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
