--- a/teeth-care/build.gradle
+++ b/teeth-care/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
